fix:responsiveness error on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,8 @@ ul li{
     visibility: visible !important;
 }
 .skill svg {
-    min-width: 80px;
-    min-height: 60px;
+    min-width: 40px;
+    min-height: 40px;
 }
 .contact-detail svg{
     width: 25px;
@@ -213,7 +213,7 @@ section{
     /* padding: 0 1.3rem; */
 }
 .container > div {
-    padding: 0 1.3rem;
+    padding: 0 1.7rem;
 }
 .full-btn{
     width: 100%;
@@ -252,7 +252,7 @@ section#about h1, section#skills h1, section#portfolio h1, section#contact h1{
     display: flex;
     flex: 0 1 auto;
     flex-wrap: wrap;
-    padding: 2.4rem 2rem;
+    padding: 2.4rem 1rem;
     align-items: center;
 }
 .project{
